[gd_scene load_steps=4 format=2]

[ext_resource path="res://MazeCellBody.gd" type="Script" id=1]

[sub_resource type="SegmentShape2D" id=1]
b = Vector2( 0, 50 )

[sub_resource type="SegmentShape2D" id=2]
b = Vector2( 50, 0 )

[node name="MazeCellBody" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="LeftWall" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RightWall" type="CollisionShape2D" parent="."]
position = Vector2( 50, 0 )
shape = SubResource( 1 )

[node name="TopWall" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="BottomWall" type="CollisionShape2D" parent="."]
position = Vector2( 0, 50 )
shape = SubResource( 2 )
